# Gamepp

./: .gitignore  CMakeLists.txt  build.sh
src/: AnimationHandler.cpp  AnimationHandler.hpp  Building.cpp  Building.hpp  Campfire.cpp  Campfire.hpp  Character.cpp  Character.hpp  Economy.cpp  Economy.hpp  FontManager.cpp  FontManager.hpp  Interactable.cpp  Interactable.hpp  InteractableDefinitions.cpp  Map.hpp  MapObject.cpp  MapObject.hpp  MapResource.cpp  MapResource.hpp  NPC.cpp  NPC.hpp  Player.cpp  Player.hpp  Presenter.cpp  Presenter.hpp  TextureManager.cpp  TextureManager.hpp  Tile.cpp  Tile.hpp  Time.cpp  Time.hpp  Utils.cpp  Utils.hpp  World.cpp  World.hpp  dialogue.cpp  dialogue.hpp  main.cpp  sequence.hpp  (+2 more)
